tests/transpiler/x/hs/append_builtin.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:31 GMT+7
a = [1, 2]

main :: IO ()
main = do
    print (append a 3)
